logo fixed on mobile view

--- a/css/main.css
+++ b/css/main.css
@@ -142,6 +142,12 @@ li a {
   }
 }
 
+@media (max-width: 600px){
+  .fas {
+    top: 13px;
+  }
+}
+
 @media (min-width: 475px) and (max-width: 600px) {
   .card .card-reveal {
     height: 50% !important;
